--- a/src/styles/ChampionSection.css
+++ b/src/styles/ChampionSection.css
@@ -34,6 +34,14 @@
 }
 
 @media (max-width: 768px) {
+  .champion-image span h1 {
+    font-size: 50px;
+  }
+
+  .champion-image span h2 {
+    font-size: 35px;
+  }
+
   .champion-winner-image img {
     width: 100%;
   }
