--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -55,15 +55,15 @@
   color: var(--yellow-font-color);
 }
 
-/* Burger menu */
-.hamburger-menu {
+/* Burger icon */
+.hamburger-icon {
   width: 30px;
   height: 22px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
-  z-index: 2;
+  z-index: 3;
 }
 
 .sidebar-menu {
@@ -72,17 +72,18 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
-  color: yellowgreen;
-  width: 0;
+  width: 200px;
   height: 100vh;
-  background-color: #333;
+  background-color: black;
   padding-top: 80px;
-  transition: width 1s ease-in-out;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 2;
 }
 
 .sidebar-open {
-  width: 200px;
+  /* width: 200px; */
+  transform: translateX(0);
 }
 
 .sidebar-menu a {
@@ -105,27 +106,28 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #ffffff4d;
+  transition: background-color 2s ease-in-out;
   z-index: 1;
 }
 
 .line {
   width: 100%;
   height: 3px;
-  background-color: #fff;
+  background-color: var(--yellow-font-color);
   border-radius: 2px;
   transition: all 0.3s ease;
 }
 
-.hamburger-menu.active .line:nth-child(1) {
+.hamburger-icon.active .line:nth-child(1) {
   transform: rotate(45deg) translateY(13px);
 }
 
-.hamburger-menu.active .line:nth-child(2) {
+.hamburger-icon.active .line:nth-child(2) {
   opacity: 0;
 }
 
-.hamburger-menu.active .line:nth-child(3) {
+.hamburger-icon.active .line:nth-child(3) {
   transform: rotate(-45deg) translateY(-13px);
 }
 
@@ -142,11 +144,15 @@
 }
 
 @media (min-width: 769px) {
-  .hamburger-menu {
+  .hamburger-icon {
     display: none;
   }
 
   .sidebar-menu {
+    display: none;
+  }
+
+  .overlay {
     display: none;
   }
 }
