--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,71 +1,11 @@
-/* Selects the root element of the document:
-   <html> in the case of HTML */
-:root {
-  font-family: "Roboto", sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  --yellow-font-color: #fbc423;
-  --red-font-color: #da0a0a;
-  --font-poppins: "Poppins", sans-serif;
+/* Global styles for the application */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  /* color: #646cff; */
-  color: tomato;
-  text-decoration: inherit;
-}
-a:hover {
-  /* color: #535bf2; */
-  color: tomato;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 65vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-input {
-  border-radius: 8px;
-  border: 1px solid #333;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  color: inherit;
-  transition: border-color 0.25s;
-}
-
-/* ================================================== */
-
-#root {
+html {
   max-width: 100vw;
   margin: 0 auto;
   text-align: center;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  margin: 0;
 }
