--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -8,4 +8,19 @@
   /* Typography variables */
   --font-family-primary: "Roboto", sans-serif;
   --font-family-secondary: "Poppins", sans-serif;
+
+  /* font-family: "Roboto", sans-serif; */
+  line-height: 1.5;
+  font-weight: 400;
+  /* --yellow-font-color: #fbc423; */
+  /* --red-font-color: #da0a0a; */
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
