--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -44,15 +44,15 @@
 }
 
 .header span {
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
 }
 
 .header-nav a:hover {
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
 }
 
 .header-nav a.active {
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
 }
 
 /* Burger icon */
@@ -93,11 +93,11 @@
 }
 
 .sidebar-menu a:hover {
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
 }
 
 .sidebar-menu a.active {
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
 }
 
 .overlay {
@@ -114,7 +114,7 @@
 .line {
   width: 100%;
   height: 3px;
-  background-color: var(--yellow-font-color);
+  background-color: var(--color-yellow);
   border-radius: 2px;
   transition: all 0.3s ease;
 }
