--- a/src/components/sections/WhySection/WhySection.css
+++ b/src/components/sections/WhySection/WhySection.css
@@ -18,12 +18,13 @@
 }
 
 .why-image span h1 {
+  font-family: var(--font-family-primary);
   position: absolute;
   top: 10%;
   left: 15%;
   font-size: 60px;
   font-weight: 800;
-  color: var(--yellow-font-color);
+  color: var(--color-yellow);
   transform: translate(-10%);
   text-transform: uppercase;
   line-height: 1.5;
@@ -36,7 +37,7 @@
   background-color: black;
   text-align: left;
   padding-left: 30px;
-  font-family: var(--font-poppins);
+  font-family: var(--font-family-secondary);
   color: white;
 }
 
