--- a/src/components/layout/Footer/Footer.css
+++ b/src/components/layout/Footer/Footer.css
@@ -1,10 +1,12 @@
 .footer-container {
   background-color: black;
   padding: 30px;
+  text-align: center;
 }
 
 .footer-content p {
   margin: 0;
+  font-family: var(--font-primary);
   color: #fff;
   font-size: 20px;
   font-weight: 700;
