--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -76,6 +76,7 @@
   height: 100vh;
   background-color: black;
   padding-top: 80px;
+  padding-left: 20px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   z-index: 2;
