--- a/src/components/sections/ChampionSection/ChampionSection.css
+++ b/src/components/sections/ChampionSection/ChampionSection.css
@@ -5,12 +5,14 @@
 
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
 }
 
 .champion-image span h1 {
   margin: 0;
-  color: var(--yellow-font-color);
+  font-family: var(--font-primary);
+  color: var(--color-yellow);
   font-size: 70px;
   text-transform: uppercase;
   font-weight: 900;
@@ -18,7 +20,8 @@
 
 .champion-image span h2 {
   margin: 0;
-  color: var(--yellow-font-color);
+  font-family: var(--font-primary);
+  color: var(--color-yellow);
   font-size: 50px;
   text-transform: uppercase;
   font-weight: 800;
@@ -26,6 +29,7 @@
 
 .champion-winner {
   background-color: black;
+  text-align: center;
 }
 
 .champion-winner-image {
